# Path_Tracking_with_ROS

./: README.md
me5413_world/: CMakeLists.txt
me5413_world/cfg/: path_tracker.cfg
me5413_world/include/me5413_world/: math_utils.hpp  path_publisher_node.hpp  path_tracker_MPC_node.hpp  pid.hpp
me5413_world/launch/: path_tracking_MPC.launch
me5413_world/src/: path_publisher_node.cpp  path_tracker_MPC_node.cpp  path_tracker_node.cpp
